--- a/public/index.html
+++ b/public/index.html
@@ -201,6 +201,116 @@
             background: #06ad56;
         }
 
+        /* 输入区域样式 */
+        .input-area {
+            padding: 12px 16px;
+            background: white;
+            border-top: 1px solid #eee;
+            position: sticky;
+            bottom: 0;
+        }
+
+        .input-wrapper {
+            display: flex;
+            gap: 8px;
+            margin-bottom: 10px;
+        }
+
+        .input-wrapper input {
+            flex: 1;
+            padding: 12px 16px;
+            border: 1px solid #ddd;
+            border-radius: 24px;
+            font-size: 15px;
+            outline: none;
+            transition: border-color 0.2s;
+        }
+
+        .input-wrapper input:focus {
+            border-color: #07c160;
+        }
+
+        .send-btn {
+            padding: 12px 24px;
+            background: #07c160;
+            color: white;
+            border: none;
+            border-radius: 24px;
+            font-size: 15px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background 0.2s;
+            white-space: nowrap;
+        }
+
+        .send-btn:hover {
+            background: #06ad56;
+        }
+
+        .upload-wrapper {
+            display: flex;
+            gap: 8px;
+        }
+
+        .upload-wrapper .upload-btn {
+            flex: 1;
+            padding: 12px;
+            font-size: 14px;
+            border-radius: 8px;
+        }
+
+        /* 消息样式 */
+        .message-item {
+            background: #f8f9fa;
+            border-radius: 12px;
+            padding: 16px;
+            margin-bottom: 12px;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+
+        .message-item:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+
+        .text-message .message-content {
+            margin-bottom: 12px;
+        }
+
+        .text-message .message-text {
+            font-size: 15px;
+            line-height: 1.6;
+            color: #333;
+            word-break: break-word;
+            white-space: pre-wrap;
+        }
+
+        .message-meta {
+            font-size: 12px;
+            color: #999;
+            margin-top: 8px;
+        }
+
+        .message-actions {
+            display: flex;
+            gap: 8px;
+        }
+
+        .copy-btn {
+            padding: 8px 16px;
+            background: #5c6bc0;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 14px;
+            transition: opacity 0.2s;
+        }
+
+        .copy-btn:hover {
+            opacity: 0.8;
+        }
+
         .loading, .empty-state {
             display: flex;
             flex-direction: column;
@@ -328,20 +438,26 @@
         </header>
 
         <!-- 文件列表 -->
-        <div class="file-list" id="fileList">
+        <div class="file-list" id="messageList">
             <div class="loading">
                 <div class="loading-spinner">⏳</div>
                 <span>加载中...</span>
             </div>
         </div>
 
-        <!-- 上传区域 -->
-        <div class="upload-area">
-            <input type="file" id="fileInput" multiple style="display: none;">
-            <div id="uploadStatus" style="display: none;"></div>
-            <button class="upload-btn" id="fileButton">
-                📤 上传文件
-            </button>
+        <!-- 输入区域 -->
+        <div class="input-area">
+            <div class="input-wrapper">
+                <input type="text" id="messageInput" placeholder="输入文字消息..." autocomplete="off">
+                <button class="send-btn" id="sendButton">发送</button>
+            </div>
+            <div class="upload-wrapper">
+                <input type="file" id="fileInput" multiple style="display: none;">
+                <div id="uploadStatus" style="display: none;"></div>
+                <button class="upload-btn" id="fileButton">
+                    📤 上传文件
+                </button>
+            </div>
         </div>
     </div>
 
