--- a/public/login.html
+++ b/public/login.html
@@ -4,25 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <title>登录 - 文件传输助手</title>
-    <meta name="theme-color" content="#07c160">
+    <meta name="theme-color" content="#667eea">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📁</text></svg>">
     <style>
+        /* ===== Glassmorphism Design System ===== */
         :root {
-            --color-primary: #07c160;
-            --color-primary-hover: #06ad56;
-            --color-primary-light: rgba(7, 193, 96, 0.1);
-            --color-danger: #fa5151;
-            --color-warning: #faad14;
-            --color-text: #1a1a1a;
-            --color-text-secondary: #666;
-            --color-text-muted: #999;
-            --color-bg-white: #fff;
-            --color-bg-card: #f7f7f7;
-            --color-border: #e6e6e6;
-            --radius-md: 10px;
-            --radius-lg: 16px;
-            --transition-fast: 0.15s ease;
-            --font-stack: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'PingFang SC', 'Microsoft YaHei', sans-serif;
+            --color-primary: #667eea;
+            --color-primary-hover: #5a67d8;
+            --color-primary-light: rgba(102, 126, 234, 0.15);
+            --color-secondary: #764ba2;
+            --color-accent: #f093fb;
+            --color-danger: #ff6b6b;
+            --color-warning: #ffd43b;
+            --color-text: #1a1a2e;
+            --color-text-secondary: #4a4a68;
+            --color-text-muted: #8b8ba7;
+            --glass-bg: rgba(255, 255, 255, 0.25);
+            --glass-bg-strong: rgba(255, 255, 255, 0.4);
+            --glass-border: rgba(255, 255, 255, 0.3);
+            --glass-shadow: 0 8px 32px rgba(31, 38, 135, 0.15);
+            --bg-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
+            --radius-md: 12px;
+            --radius-lg: 20px;
+            --radius-xl: 28px;
+            --radius-full: 9999px;
+            --shadow-glow: 0 0 40px rgba(102, 126, 234, 0.3);
+            --transition-fast: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+            --transition-normal: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            --font-stack: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Microsoft YaHei', sans-serif;
         }
 
         *, *::before, *::after {
@@ -33,7 +42,8 @@
 
         body {
             font-family: var(--font-stack);
-            background: linear-gradient(135deg, #07c160 0%, #06ad56 50%, #059a4a 100%);
+            background: var(--bg-gradient);
+            background-attachment: fixed;
             min-height: 100vh;
             min-height: 100dvh;
             display: flex;
@@ -41,67 +51,124 @@
             justify-content: center;
             padding: 20px;
             -webkit-font-smoothing: antialiased;
+            overflow-x: hidden;
+        }
+
+        /* Animated Background Orbs */
+        body::before,
+        body::after {
+            content: '';
+            position: fixed;
+            border-radius: 50%;
+            filter: blur(80px);
+            opacity: 0.5;
+            z-index: -1;
+            animation: float 20s ease-in-out infinite;
+        }
+
+        body::before {
+            width: 500px;
+            height: 500px;
+            background: rgba(102, 126, 234, 0.5);
+            top: -150px;
+            left: -150px;
+        }
+
+        body::after {
+            width: 400px;
+            height: 400px;
+            background: rgba(240, 147, 251, 0.5);
+            bottom: -100px;
+            right: -100px;
+            animation-delay: -10s;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translate(0, 0) scale(1); }
+            25% { transform: translate(30px, 30px) scale(1.05); }
+            50% { transform: translate(0, 60px) scale(1); }
+            75% { transform: translate(-30px, 30px) scale(0.95); }
         }
 
         :focus-visible {
             outline: 2px solid var(--color-primary);
-            outline-offset: 2px;
+            outline-offset: 3px;
         }
 
         .login-container {
-            background: var(--color-bg-white);
-            border-radius: 20px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
+            background: var(--glass-bg-strong);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid var(--glass-border);
+            border-radius: var(--radius-xl);
+            box-shadow: var(--glass-shadow), var(--shadow-glow);
             width: 100%;
-            max-width: 400px;
-            padding: 40px;
-            animation: cardSlideUp 0.4s ease-out;
+            max-width: 420px;
+            padding: 48px 40px;
+            animation: cardSlideUp 0.5s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         @keyframes cardSlideUp {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+            from {
+                opacity: 0;
+                transform: translateY(30px) scale(0.95);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
         }
 
         .login-header {
             text-align: center;
-            margin-bottom: 32px;
+            margin-bottom: 36px;
         }
 
         .login-icon {
-            width: 64px;
-            height: 64px;
-            background: var(--color-primary-light);
+            width: 80px;
+            height: 80px;
+            background: linear-gradient(135deg, var(--color-primary), var(--color-secondary));
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 0 auto 16px;
-            font-size: 32px;
+            margin: 0 auto 20px;
+            font-size: 36px;
+            box-shadow: 0 8px 24px rgba(102, 126, 234, 0.4);
+            animation: iconPulse 3s ease-in-out infinite;
+        }
+
+        @keyframes iconPulse {
+            0%, 100% { transform: scale(1); box-shadow: 0 8px 24px rgba(102, 126, 234, 0.4); }
+            50% { transform: scale(1.05); box-shadow: 0 12px 32px rgba(102, 126, 234, 0.5); }
         }
 
         .login-title {
-            font-size: 22px;
-            font-weight: 600;
-            color: var(--color-text);
-            margin-bottom: 6px;
+            font-size: 26px;
+            font-weight: 700;
+            background: linear-gradient(135deg, var(--color-text), var(--color-text-secondary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            margin-bottom: 8px;
+            letter-spacing: -0.5px;
         }
 
         .login-subtitle {
-            font-size: 14px;
+            font-size: 15px;
             color: var(--color-text-muted);
         }
 
         .form-group {
-            margin-bottom: 24px;
+            margin-bottom: 28px;
         }
 
         .form-label {
             display: block;
             font-size: 14px;
-            font-weight: 500;
+            font-weight: 600;
             color: var(--color-text);
-            margin-bottom: 8px;
+            margin-bottom: 10px;
         }
 
         .password-wrapper {
@@ -111,72 +178,101 @@
 
         .form-input {
             flex: 1;
-            padding: 14px 48px 14px 16px;
-            border: 1.5px solid var(--color-border);
+            padding: 14px 50px 14px 18px;
+            border: 1px solid var(--glass-border);
             border-radius: var(--radius-md);
             font-size: 16px;
             font-family: inherit;
-            transition: border-color var(--transition-fast), box-shadow var(--transition-fast);
+            transition: all var(--transition-fast);
             outline: none;
-            background: var(--color-bg-white);
+            background: var(--glass-bg);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            color: var(--color-text);
+        }
+
+        .form-input::placeholder {
+            color: var(--color-text-muted);
         }
 
         .form-input:focus {
             border-color: var(--color-primary);
-            box-shadow: 0 0 0 3px var(--color-primary-light);
+            box-shadow: 0 0 0 4px var(--color-primary-light), var(--shadow-glow);
+            background: var(--glass-bg-strong);
         }
 
         .form-input:disabled {
-            background: var(--color-bg-card);
+            background: var(--glass-bg);
             cursor: not-allowed;
-            opacity: 0.7;
+            opacity: 0.6;
         }
 
         .password-toggle {
             position: absolute;
-            right: 12px;
+            right: 14px;
             top: 50%;
             transform: translateY(-50%);
             background: none;
             border: none;
             font-size: 18px;
             cursor: pointer;
-            padding: 4px;
+            padding: 6px;
             color: var(--color-text-muted);
-            border-radius: 4px;
-            transition: color var(--transition-fast);
+            border-radius: var(--radius-md);
+            transition: all var(--transition-fast);
         }
 
         .password-toggle:hover {
-            color: var(--color-text-secondary);
+            color: var(--color-primary);
+            background: var(--color-primary-light);
         }
 
         .login-button {
             width: 100%;
-            padding: 14px;
-            background: var(--color-primary);
+            padding: 16px;
+            background: linear-gradient(135deg, var(--color-primary), var(--color-secondary));
             color: #fff;
             border: none;
             border-radius: var(--radius-md);
             font-size: 16px;
-            font-weight: 600;
+            font-weight: 700;
             font-family: inherit;
             cursor: pointer;
-            transition: background var(--transition-fast), transform 0.1s ease;
+            transition: all var(--transition-fast);
+            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .login-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
+            transition: left 0.6s;
+        }
+
+        .login-button:hover::before {
+            left: 100%;
         }
 
         .login-button:hover {
-            background: var(--color-primary-hover);
+            transform: translateY(-3px);
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.5);
         }
 
         .login-button:active {
-            transform: scale(0.98);
+            transform: translateY(-1px) scale(0.98);
         }
 
         .login-button:disabled {
-            background: #ccc;
+            background: var(--color-text-muted);
             cursor: not-allowed;
             transform: none;
+            box-shadow: none;
         }
 
         .login-button.loading {
@@ -190,11 +286,11 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 20px;
-            height: 20px;
-            margin: -10px 0 0 -10px;
-            border: 2px solid #fff;
-            border-top-color: transparent;
+            width: 22px;
+            height: 22px;
+            margin: -11px 0 0 -11px;
+            border: 3px solid rgba(255,255,255,0.3);
+            border-top-color: #fff;
             border-radius: 50%;
             animation: spin 0.8s linear infinite;
         }
@@ -204,52 +300,73 @@
         }
 
         .message {
-            padding: 12px 16px;
-            border-radius: 8px;
-            margin-bottom: 16px;
+            padding: 14px 18px;
+            border-radius: var(--radius-md);
+            margin-bottom: 20px;
             font-size: 14px;
             display: none;
-            animation: fadeIn 0.2s ease-out;
+            animation: messageSlide 0.3s ease-out;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-4px); }
-            to { opacity: 1; transform: translateY(0); }
+        @keyframes messageSlide {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         #errorMessage {
-            background: #fff2f0;
-            border: 1px solid #ffccc7;
+            background: rgba(255, 107, 107, 0.15);
+            border: 1px solid rgba(255, 107, 107, 0.3);
             color: var(--color-danger);
         }
 
         #warningMessage {
-            background: #fffbe6;
-            border: 1px solid #ffe58f;
-            color: var(--color-warning);
+            background: rgba(255, 212, 59, 0.15);
+            border: 1px solid rgba(255, 212, 59, 0.3);
+            color: #b8860b;
         }
 
         .footer {
             text-align: center;
-            margin-top: 24px;
-            font-size: 12px;
+            margin-top: 28px;
+            font-size: 13px;
             color: var(--color-text-muted);
         }
 
         @media (max-width: 480px) {
+            body::before,
+            body::after {
+                display: none;
+            }
+
             .login-container {
-                padding: 32px 24px;
-                border-radius: 16px;
+                padding: 36px 28px;
+                border-radius: var(--radius-lg);
             }
 
             .login-icon {
-                width: 52px;
-                height: 52px;
-                font-size: 26px;
+                width: 64px;
+                height: 64px;
+                font-size: 28px;
             }
 
             .login-title {
-                font-size: 20px;
+                font-size: 22px;
+            }
+        }
+
+        @media (prefers-reduced-motion: reduce) {
+            *, *::before, *::after {
+                animation-duration: 0.01ms !important;
+                animation-iteration-count: 1 !important;
+                transition-duration: 0.01ms !important;
             }
         }
     </style>
