--- a/public/login.html
+++ b/public/login.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <title>登录 - 文件传输助手</title>
-    <meta name="theme-color" content="#667eea">
+    <meta name="theme-color" content="#00b894">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📁</text></svg>">
     <style>
         /* ===== Glassmorphism Design System ===== */
         :root {
-            --color-primary: #667eea;
-            --color-primary-hover: #5a67d8;
-            --color-primary-light: rgba(102, 126, 234, 0.15);
-            --color-secondary: #764ba2;
-            --color-accent: #f093fb;
+            --color-primary: #00b894;
+            --color-primary-hover: #00a085;
+            --color-primary-light: rgba(0, 184, 148, 0.15);
+            --color-secondary: #00cec9;
+            --color-accent: #81ecec;
             --color-danger: #ff6b6b;
-            --color-warning: #ffd43b;
-            --color-text: #1a1a2e;
-            --color-text-secondary: #4a4a68;
-            --color-text-muted: #8b8ba7;
+            --color-warning: #fdcb6e;
+            --color-text: #2d3436;
+            --color-text-secondary: #636e72;
+            --color-text-muted: #b2bec3;
             --glass-bg: rgba(255, 255, 255, 0.25);
             --glass-bg-strong: rgba(255, 255, 255, 0.4);
             --glass-border: rgba(255, 255, 255, 0.3);
-            --glass-shadow: 0 8px 32px rgba(31, 38, 135, 0.15);
-            --bg-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
+            --glass-shadow: 0 8px 32px rgba(0, 184, 148, 0.15);
+            --bg-gradient: linear-gradient(135deg, #00b894 0%, #00cec9 50%, #81ecec 100%);
             --radius-md: 12px;
             --radius-lg: 20px;
             --radius-xl: 28px;
             --radius-full: 9999px;
-            --shadow-glow: 0 0 40px rgba(102, 126, 234, 0.3);
+            --shadow-glow: 0 0 40px rgba(0, 184, 148, 0.3);
             --transition-fast: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
             --transition-normal: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             --font-stack: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Microsoft YaHei', sans-serif;
@@ -69,7 +69,7 @@
         body::before {
             width: 500px;
             height: 500px;
-            background: rgba(102, 126, 234, 0.5);
+            background: rgba(0, 184, 148, 0.5);
             top: -150px;
             left: -150px;
         }
@@ -77,7 +77,7 @@
         body::after {
             width: 400px;
             height: 400px;
-            background: rgba(240, 147, 251, 0.5);
+            background: rgba(129, 236, 236, 0.5);
             bottom: -100px;
             right: -100px;
             animation-delay: -10s;
@@ -134,13 +134,13 @@
             justify-content: center;
             margin: 0 auto 20px;
             font-size: 36px;
-            box-shadow: 0 8px 24px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 8px 24px rgba(0, 184, 148, 0.4);
             animation: iconPulse 3s ease-in-out infinite;
         }
 
         @keyframes iconPulse {
-            0%, 100% { transform: scale(1); box-shadow: 0 8px 24px rgba(102, 126, 234, 0.4); }
-            50% { transform: scale(1.05); box-shadow: 0 12px 32px rgba(102, 126, 234, 0.5); }
+            0%, 100% { transform: scale(1); box-shadow: 0 8px 24px rgba(0, 184, 148, 0.4); }
+            50% { transform: scale(1.05); box-shadow: 0 12px 32px rgba(0, 184, 148, 0.5); }
         }
 
         .login-title {
@@ -239,7 +239,7 @@
             font-family: inherit;
             cursor: pointer;
             transition: all var(--transition-fast);
-            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 6px 20px rgba(0, 184, 148, 0.4);
             position: relative;
             overflow: hidden;
         }
@@ -261,7 +261,7 @@
 
         .login-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.5);
+            box-shadow: 0 10px 30px rgba(0, 184, 148, 0.5);
         }
 
         .login-button:active {
