fix: 修复全屏时图片预览模态框下载按钮被裁切的问题
- modal-content 改为 flex 纵向布局，确保 header/footer 始终可见
- modal-body 设为 flex:1 + min-height:0 + overflow:auto，图片自适应
- header/footer 添加 flex-shrink:0 防止被压缩
- 图片 max-height 从固定 70vh 改为 100%，适应容器大小

--- a/public/index.html
+++ b/public/index.html
@@ -746,6 +746,8 @@
             border-radius: var(--radius-lg);
             max-width: 90%;
             max-height: 90%;
+            display: flex;
+            flex-direction: column;
             overflow: hidden;
             box-shadow: var(--shadow-ambient), var(--glow-primary);
             animation: modalSlideUp 0.4s var(--transition-spring);
@@ -769,6 +771,7 @@
             padding: 16px 20px;
             border-bottom: var(--glass-border);
             background: var(--overlay);
+            flex-shrink: 0;
         }
 
         .image-modal-header span {
@@ -805,11 +808,14 @@
             align-items: center;
             justify-content: center;
             background: rgba(0, 0, 0, 0.3);
+            flex: 1;
+            min-height: 0;
+            overflow: auto;
         }
 
         .image-modal-body img {
             max-width: 100%;
-            max-height: 70vh;
+            max-height: 100%;
             border-radius: var(--radius-sm);
             box-shadow: var(--shadow-lg);
         }
@@ -819,6 +825,7 @@
             border-top: var(--glass-border);
             text-align: center;
             background: var(--overlay);
+            flex-shrink: 0;
         }
 
         .image-modal-footer button {
