style: 标题文字使用独立高亮渐变 + 修复登录页动画闪烁
- 登录页和主页标题使用更亮的独立渐变色(#40f8ff → #d88aff → #ff55cc)
- 修复登录页 cardIn 动画 opacity 变化导致渐变文字闪烁的问题

--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
         .app-title {
             font-size: 18px;
             font-weight: 700;
-            background: var(--cp-gradient);
+            background: linear-gradient(135deg, #40f8ff, #d88aff, #ff55cc);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
