--- a/public/login.html
+++ b/public/login.html
@@ -96,8 +96,8 @@
         }
 
         @keyframes cardIn {
-            from { opacity: 0; transform: translateY(12px); }
-            to { opacity: 1; transform: translateY(0); }
+            from { transform: translateY(12px); }
+            to { transform: translateY(0); }
         }
 
         .login-header { text-align: center; margin-bottom: 32px; }
@@ -118,7 +118,7 @@
         .login-title {
             font-size: 24px;
             font-weight: 700;
-            background: var(--cp-gradient);
+            background: linear-gradient(135deg, #40f8ff, #d88aff, #ff55cc);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
