--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <meta name="theme-color" content="#0a0a0f">
     <meta name="description" content="多平台文件传输助手">
 
+    <link rel="manifest" href="/manifest.json">
+
     <style>
         /* ===== Cyberpunk Neon Design System ===== */
         :root {
@@ -785,6 +787,7 @@
     <script src="./js/api.js"></script>
     <script src="./js/ui.js"></script>
     <script src="./js/fileUpload.js"></script>
+    <script src="./js/pwa.js"></script>
     <script src="./js/app.js"></script>
 
     <script>
